<resources>
    <string name="app_name">Ennis_HW07</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="create_new_account_button">Create New Account</string>
    <string name="toast_missing_email_password">Email and Password fields are missing.</string>
    <string name="toast_missing_email">Email field is missing.</string>
    <string name="toast_missing_password">Password field is missing.</string>
    <string name="hint_name">Name</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>
    <string name="toast_missing_email_password_name">Name, Email, and Password fields are missing.</string>
    <string name="toast_missing_email_name">Email and Name fields are missing.</string>
    <string name="toast_missing_password_name">Password and Name fields are missing.</string>
    <string name="toast_missing_name">Name field is missing.</string>
    <string name="logout_button">Logout</string>
    <string name="new_shopping_list_button">New Shopping List</string>
    <string name="lists_invited_to_label">Shopping Lists You\'ve Been Invited To:</string>
    <string name="your_shopping_lists_label">Shopping Lists You Created:</string>
    <string name="friends_list_button">Friends List</string>
    <string name="shopping_label">Shopping</string>
    <string name="list_label">List</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="leave_list">Leave List</string>
    <string name="toast_missing_list_title">Title field is missing.</string>
    <string name="invite_menu">Invite Menu</string>
    <string name="add_item_button">Add Item</string>
    <string name="hint_item_name">Item Name</string>
    <string name="hint_item_cost">Item Cost</string>
    <string name="toast_missing_item_name">Item name field is missing.</string>
    <string name="toast_missing_item_cost">Item cost field is missing.</string>
    <string name="toast_missing_item_name_cost">Item name and cost fields are missing.</string>
    <string name="invite_menu_message">Welcome to the Invite Menu</string>
    <string name="friends_list_welcome">Welcome to your friends list</string>
    <string name="button_send_invite">Send Invite</string>
    <string name="remove_invite_button">Remove Invite</string>
    <string name="button_back_to_list">Back To Shopping List Details</string>
    <string name="invite_menu_sub_message">Manage your list invites here via the User Listing feature.</string>
    <string name="toast_owner_invite">Cannot invite yourself to your own list.</string>
    <string name="toast_owner_remove_invite">Cannot un-invite or invite yourself to your own list.</string>
    <string name="toast_attempt_uninvite">Cannot un-invite a user that was never invited.</string>
    <string name="toast_attempt_invite">Invite was already sent to this user.</string>
    <string name="toast_success_invite_user">You have successfully invited a new user.</string>
    <string name="toast_success_remove_user">You have successfully un-invited a user.</string>
    <string name="toast_success_leave_list">You have successfully left a list.</string>
</resources>