<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateItemFragment" >

    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint_item_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemViewShoppingBag" />

    <EditText
        android:id="@+id/editTextItemCost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_item_cost"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/editTextItemName"
        app:layout_constraintStart_toStartOf="@+id/editTextItemName"
        app:layout_constraintTop_toBottomOf="@+id/editTextItemName" />

    <Button
        android:id="@+id/buttonSubmitItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/submit_button"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/editTextItemCost"
        app:layout_constraintStart_toStartOf="@+id/editTextItemCost"
        app:layout_constraintTop_toBottomOf="@+id/editTextItemCost" />

    <Button
        android:id="@+id/buttonCancelItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/cancel_button"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/buttonSubmitItem"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubmitItem" />

    <ImageView
        android:id="@+id/itemViewShoppingBag"
        android:layout_width="87dp"
        android:layout_height="74dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_baseline_shopping_bag_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>