<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment" >

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        android:text="@string/logout_button"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newShoppingListButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/new_shopping_list_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutButton" />

    <TextView
        android:id="@+id/listsInvitedToLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lists_invited_to_label"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newShoppingListButton" />

    <TextView
        android:id="@+id/yourShoppingListsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/your_shopping_lists_label"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/listsInvitedToLabel"
        app:layout_constraintStart_toStartOf="@+id/listsInvitedToLabel"
        app:layout_constraintTop_toBottomOf="@+id/listsInvitedToLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listsInvitedToRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/yourShoppingListsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listsInvitedToLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/yourShoppingListsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourShoppingListsLabel"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/friendsListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        android:text="@string/friends_list_button"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewHomeShoppingCart"
        android:layout_width="42dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        app:layout_constraintBottom_toBottomOf="@+id/logoutButton"
        app:layout_constraintEnd_toStartOf="@+id/friendsListButton"
        app:layout_constraintStart_toEndOf="@+id/logoutButton"
        app:layout_constraintTop_toTopOf="@+id/logoutButton" />

</androidx.constraintlayout.widget.ConstraintLayout>