<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateShoppingListFragment" >

    <EditText
        android:id="@+id/editTextListTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubmitNewList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCancelNewList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/cancel_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonSubmitNewList" />

    <Button
        android:id="@+id/buttonSubmitNewList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/submit_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancelNewList"
        app:layout_constraintEnd_toEndOf="@+id/editTextListTitle"
        app:layout_constraintStart_toStartOf="@+id/editTextListTitle" />

    <ImageView
        android:id="@+id/imageViewPlusShoppingCart"
        android:layout_width="129dp"
        android:layout_height="139dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_baseline_add_shopping_cart_24"
        app:layout_constraintBottom_toTopOf="@+id/editTextListTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>